[gd_scene load_steps=4 format=3 uid="uid://butocgkdb82uo"]

[ext_resource type="Script" path="res://player.gd" id="1_envte"]
[ext_resource type="SpriteFrames" uid="uid://e27kiwnjci8k" path="res://assets/player_sprite_frames.tres" id="1_xsl3v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ibxnn"]
radius = 30.0

[node name="Player" type="Area2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_envte")

[node name="AnimatedSprite2d" type="AnimatedSprite2D" parent="."]
z_index = 2
frames = ExtResource("1_xsl3v")
animation = &"walk_down"

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ibxnn")

[node name="RayCast2d" type="RayCast2D" parent="."]
collision_mask = 7
collide_with_areas = true

[node name="Camera2d" type="Camera2D" parent="."]
editor_draw_limits = true
editor_draw_drag_margin = true
